--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "dynamicstepform",
   "version": "1.0.5",
   "description": "Vanilla js library to create a form by steps",
-  "main": "dist/dynamicstepform.js",
+  "main": "src/dynamicstepform.js",
   "scripts": {
-    "test": "node dist/dynamicstepform.js",
-    "testdev": "node src/dynamicstepform.js"
+    "test": "node src/dynamicstepform.js"
   },
   "repository": {
     "type": "git",
